# api_service/app/docs/swagger.json
@@ -767,7 +767,7 @@
                 }
             }
         },
-        "/sealur-pro/additionals/{id}/seal": {
+        "/sealur-pro/additionals/{id}/pobt": {
             "patch": {
                 "security": [
                     {
@@ -775,6 +775,76 @@
                     }
                 ],
                 "description": "обновление обтюраторов для путгм",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sealur Pro -\u003e additionals"
+                ],
+                "summary": "Update PObturator",
+                "parameters": [
+                    {
+                        "description": "additional p_obturator info",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdatePObtDTO"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "addit id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.IdResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/sealur-pro/additionals/{id}/seal": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "обновление уплотнителя для путгм",
                 "consumes": [
                     "application/json"
                 ],
@@ -3334,6 +3404,7 @@
         "models.CreateAdditDTO": {
             "type": "object",
             "required": [
+                "basis",
                 "coating",
                 "construction",
                 "fillers",
@@ -3342,6 +3413,8 @@
                 "mod",
                 "mounting",
                 "obturator",
+                "pobturator",
+                "sealant",
                 "temperature"
             ],
             "properties": {
@@ -3370,6 +3443,9 @@
                     "type": "string"
                 },
                 "obturator": {
+                    "type": "string"
+                },
+                "pobturator": {
                     "type": "string"
                 },
                 "sealant": {
@@ -3877,6 +3953,27 @@
                 }
             }
         },
+        "models.UpdatePObtDTO": {
+            "type": "object",
+            "required": [
+                "pobturator",
+                "type"
+            ],
+            "properties": {
+                "change": {
+                    "type": "string"
+                },
+                "pobturator": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/proto.AddPObturator"
+                    }
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UpdateSealantDTO": {
             "type": "object",
             "required": [
@@ -4051,13 +4148,27 @@
                 }
             }
         },
-        "proto.AddSealant": {
+        "proto.AddPObturator": {
             "type": "object",
             "properties": {
                 "description": {
                     "type": "string"
                 },
                 "forDescr": {
+                    "type": "string"
+                },
+                "short": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "proto.AddSealant": {
+            "type": "object",
+            "properties": {
+                "description": {
                     "type": "string"
                 },
                 "short": {
@@ -4082,6 +4193,12 @@
         "proto.Additional": {
             "type": "object",
             "properties": {
+                "basis": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/proto.AddBasis"
+                    }
+                },
                 "coating": {
                     "type": "array",
                     "items": {
@@ -4131,6 +4248,18 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/proto.AddObturator"
+                    }
+                },
+                "pObturator": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/proto.AddPObturator"
+                    }
+                },
+                "sealant": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/proto.AddSealant"
                     }
                 },
                 "temperature": {
